# zktls-enclave

./: .gitignore  Cargo.toml  README.md
.github/workflows/: base-ci.yml
app/: Cargo.toml
app/sgx/: enclave.edl
app/src/: main.rs
crates/enclave/: Cargo.toml
crates/enclave/src/: error.rs  lib.rs  ocalls.rs  parser.rs  tcp_stream_oc.rs  tls.rs
crates/sgx-ocalls/: Cargo.toml
crates/sgx-ocalls/src/: bindings.rs  lib.rs  tcp_stream.rs
crates/tls-enclave/: Cargo.toml
crates/tls-enclave/src/: error.rs  lib.rs  traits.rs
crates/traits/zktls-enclave-traits/: Cargo.toml
crates/traits/zktls-enclave-traits/src/: lib.rs
crates/untrusted-host/: Cargo.toml
crates/untrusted-host/src/: lib.rs
enclave/: Cargo.toml
enclave/src/: error.rs  lib.rs
mock-lib/: Cargo.toml
mock-lib/src/: lib.rs
pairs/: list.txt
