[package]
name = "tls-enclave"
version = "0.1.0"
edition = "2021"

[features]
# The `tstd_enclave` feature is requested by the automata_sgx_sdk
tstd_enclave = ["automata-sgx-sdk/tstd_enclave"]

[lib]
name = "enclave"
crate-type = ["staticlib"]

[dependencies]
automata-sgx-sdk.workspace = true
ethabi.workspace = true
serde_json.workspace = true
hex.workspace = true
rustls.workspace = true
webpki-roots.workspace = true
thiserror.workspace = true

tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"]}

serde = { workspace = true, features = ["derive"]}
tiny-keccak = { workspace = true, features = ["sha3", "keccak"]}
clap = { workspace = true, features = ["derive"] }
zktls-enclave-traits.workspace = true