[package]
name = "tls-enclave"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls.workspace = true
tracing.workspace = true
webpki-roots.workspace = true
thiserror.workspace = true
serde_json.workspace = true
